[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Game/Map/MiniMap/miniRoom.png" type="Texture" id=1]
[ext_resource path="res://scripts/Game/Omens/blood_bed.gd" type="Script" id=2]
[ext_resource path="res://assets/tile.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 15.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="blood_bed" type="Node2D" groups=["omen"]]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
self_modulate = Color( 0.403922, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="light" type="Sprite" parent="StaticBody2D/Sprite"]
visible = false
modulate = Color( 1, 1, 1, 0.25098 )
show_behind_parent = true
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="giver" type="Area2D" parent="."]
position = Vector2( 40, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="giver"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="giver"]
self_modulate = Color( 0.639216, 0, 0, 1 )
position = Vector2( -4, 0 )
scale = Vector2( 0.75, 0.8125 )
z_index = -1
texture = ExtResource( 3 )

[node name="taker" type="Area2D" parent="."]
position = Vector2( 0, 40 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="taker"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="taker"]
self_modulate = Color( 0.12549, 0.639216, 0, 1 )
position = Vector2( -2.65954, 0 )
scale = Vector2( 0.583779, 0.8125 )
z_index = -1
texture = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource( 3 )
shape_centered = false

[node name="gline" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.694118, 0.223529, 0.223529, 1 )

[node name="tline" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.4, 1, 0.466667, 1 )

[connection signal="body_entered" from="giver" to="." method="_on_giver_body_entered"]
[connection signal="body_exited" from="giver" to="." method="_on_giver_body_exited"]
[connection signal="body_entered" from="taker" to="." method="_on_taker_body_entered"]
[connection signal="body_exited" from="taker" to="." method="_on_taker_body_exited"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
